--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.12",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "stripe": "^8.153.0"
   },
   "eslintConfig": {
     "extends": [
