--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "browser-image-compression": "^1.0.14",
     "clsx": "^1.1.1",
     "loadash": "^1.0.0",
     "lodash": "^4.17.21",
