--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "lodash": "^4.17.21",
     "mongo": "^0.1.0",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.12",
