--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-stripe-elements": "^6.1.2",
     "redux": "^4.1.0",
     "redux-promise": "^0.6.0",
+    "socket.io-client": "^4.1.2",
     "stripe": "^8.153.0",
     "web-vitals": "^1.1.2"
   },
