--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^5.12.12",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.1.2",
     "stripe": "^8.153.0",
     "uuid": "^8.3.2"
   },
