--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "clsx": "^1.1.1",
     "loadash": "^1.0.0",
     "lodash": "^4.17.21",
+    "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -28,6 +29,7 @@
     "react-stripe-elements": "^6.1.2",
     "redux": "^4.1.0",
     "redux-promise": "^0.6.0",
+    "sass-loader": "^12.1.0",
     "socket.io-client": "^4.1.2",
     "stripe": "^8.153.0",
     "web-vitals": "^1.1.2"
@@ -70,6 +72,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "sass": "^1.35.1"
   }
 }
