--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "aes256": "^1.1.0",
     "axios": "^0.21.1",
     "browser-image-compression": "^1.0.14",
     "clsx": "^1.1.1",
