--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "clsx": "^1.1.1",
     "loadash": "^1.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
