--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,13 @@
     "@emotion/react": "^11.4.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.15.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "ace-builds": "^1.4.12",
     "aes256": "^1.1.0",
     "axios": "^0.21.1",
     "browser-image-compression": "^1.0.14",
@@ -21,6 +23,7 @@
     "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-ace": "^9.4.1",
     "react-dom": "^17.0.2",
     "react-images-uploading": "^3.1.2",
     "react-redux": "^7.2.4",
