--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/standalone": "^7.14.6",
     "@emotion/react": "^11.4.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -17,6 +18,8 @@
     "axios": "^0.21.1",
     "browser-image-compression": "^1.0.14",
     "clsx": "^1.1.1",
+    "google-closure-compiler": "^20210601.0.0",
+    "google-closure-compiler-js": "^20200719.0.0",
     "loadash": "^1.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -25,6 +28,7 @@
     "react": "^17.0.2",
     "react-ace": "^9.4.1",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
     "react-images-uploading": "^3.1.2",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
