--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/standalone": "^7.14.6",
+    "axios": "^0.21.1",
     "connect-mongo": "^4.4.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "got": "^11.8.2",
     "lodash": "^4.17.21",
     "mongo": "^0.1.0",
     "mongodb": "^3.6.9",
